media query: when under 315px, added small margin to bottom of button to avoid it being cut off by footer

--- a/css/style.css
+++ b/css/style.css
@@ -430,4 +430,10 @@ button:hover, button:focus,
 	}
 }
 
+@media all and (max-width: 315px) {
+	.button-code {
+		margin-bottom: 30px;
+	}
+}
+
 
